--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.saber.slidinglistview.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
+    <com.example.saber.slidinglistview.MyRecyclerView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
         >
-
-    </android.support.v7.widget.RecyclerView>
+    </com.example.saber.slidinglistview.MyRecyclerView>
 </RelativeLayout>
